# data-platform

./: .gitignore  README.md  databricks.yml  justfile  pyproject.toml
.github/workflows/: quality-and-deploy.yml
docs/: deployment-scope.md  resource-generation.md  streaming-config.md
docs/streaming/: cdc-ack-tracker-line-by-line.md  cdc-inflight-queue-line-by-line.md  cdc-leadership-watchdog.md  (+2 more)
resources/: __init__.py
scripts/: detect_deployment_scope.py  generate_resource.py
services/: pyproject.toml
services/cdc-logical-replication/src/cdc_logical_replication/: __init__.py  __main__.py  ack.py  app.py  batching.py  kinesis.py  leader.py  models.py  partition_key.py  protocol.py  replication.py  settings.py  slot.py
services/cdc-logical-replication/tests/: test_ack_tracker.py  test_batching.py  test_partition_key.py  test_protocol.py  test_queue.py
services/infra/: README.md
services/infra/modules/kinesis_stream/: main.tf  outputs.tf  variables.tf
services/infra/modules/rds_postgres_logical_replication/: main.tf  outputs.tf  variables.tf
services/infra/stacks/cdc_logical_replication_dev/: README.md  bootstrap_db.sh  main.tf  outputs.tf  tfplan  variables.tf  versions.tf
services/src/cdc_logical_replication/: ack.py  app.py  batching.py  kinesis.py  leader.py  models.py  partition_key.py  protocol.py  queue.py  replication.py  settings.py
services/tests/: conftest.py  test_ack_tracker.py  test_batching.py  test_kinesis.py  test_leader.py  test_partition_key.py  test_protocol.py  test_queue.py  test_settings.py
services/tests/integration/: test_cdc_logical_replication_e2e.py  test_kinesis_retry_integration.py
src/: __init__.py
targets/: dev.yml  prod.yml  staging.yml
tests/: test_deployment_scope.py  test_resource_generator.py
(+44 files in other folders)
