[project]
name = "data-platform"
version = "0.1.0"
description = "Databricks Asset Bundle monorepo for domain/source data products."
requires-python = ">=3.10,<3.13"
dependencies = [
    "databricks-bundles>=0.279.0",
    "pydantic>=2.9.0,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.43.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resources", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyrefly]
project-includes = ["resources/**/*.py", "scripts/**/*.py", "src/**/*.py", "tests/**/*.py"]
search-path = ["resources", "scripts", "src"]
python-version = "3.10"
