[project]
name = "cdc-logical-replication"
version = "0.1.0"
description = "Postgres logical replication to Kinesis micro-batching service."
requires-python = ">=3.10,<3.13"
dependencies = [
  "boto3>=1.34.0,<2.0.0",
  "psycopg[binary]>=3.3.2,<3.4.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdc_logical_replication"]

[project.scripts]
cdc-logical-replication = "cdc_logical_replication.__main__:main"

[tool.pytest.ini_options]
markers = [
  "integration: tests requiring live Postgres + AWS Kinesis infrastructure",
]
